--- a/src/main/resources/informe-LaTex/Qsim.sty
+++ b/src/main/resources/informe-LaTex/Qsim.sty
@@ -11,6 +11,7 @@
 
 \newcommand{\tpi}{Tecnicatura Universitaria en Programación Informática}
 \newcommand{\orga}{Organización de Computadoras}
+\newcommand{\ui}{Diseño de Interfaces de Usuario}
 \newcommand{\tati}{Tatiana Molinari}
 \newcommand{\susi}{Susana Rosito}
 \newcommand{\Q}{QArq}
@@ -27,6 +28,8 @@
 \newcommand{\EI}{ejecución de la instrucción}
 \newcommand{\codmaq}{código máquina}
 
+
+\hyphenation{ca-rre-ra}
 
 \newcommand{\ojo}[2]{{\large\verde{#1}}\footnote{#2}}
 %\newcommand{\ojo}[2]{#2}
