--- a/src/main/resources/informe-LaTex/contexto.tex
+++ b/src/main/resources/informe-LaTex/contexto.tex
@@ -67,19 +67,19 @@ Este simulador se eligió por tratarse de un lenguaje assembler mas reducido, co
 Entonces el equipo docente eligió definir una arquitectura teórica que proveyera solamente lo necesario para cumplir con los objetivos de la materia e inspirados en un caso similar de la Universidad de Buenos Aires, se definió la arquitectura \textbf{QARQ}, muy similar a la que se presenta en la sección \ref{apendiceQ}\\
 
 
-Posteriormente, el equipo docente propuso un cambio en la secuencia didáctica que requirió la división de la especificación de la arquitectura QARQ en varias partes, donde cada una recibe el nombre de \textbf{Arquitectura Qi} y agrega una nueva funcionalidad (instrucciones o modos de direccionamientos) a la versión anterior, son como capas de cebolla. Sin embargo todos los ejercicios de las arquitecturas Qi se siguen haciendo en papel. \\
+Posteriormente, el equipo docente propuso un cambio en la secuencia didáctica que requirió la división de la especificación de la arquitectura QARQ en varias partes, donde cada una recibe el nombre de \textbf{Arquitectura Qi} y agrega una nueva funcionalidad (instrucciones o modos de direccionamientos) a la versión anterior, construyendo una arquitectura en capas. Sin embargo todos los ejercicios de las arquitecturas Qi se siguen haciendo en papel. \\
 
 Actualmente se busca incorporar el \textbf{Simulador Qsim} en la materia con el objetivo de que los alumnos puedan visualizar el funcionamiento de una computadora al mas mínimo detalle, a través de la ejercitación del \ciclo.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Arquitecturas Q (Susi)}
+\section{Arquitecturas Q}
 
-Las versiones de la arquitectura Q están pensadas para incorporar funcionalidades de manera que la curva de aprendizaje sea adecuada para los alumnos, siendo paulatina e incremental, es decir, cada arquitectura Qi agrega más funcionalidad (ya sean instrucciones nuevas o modos de direccionamiento) a las arquitecturas Qi anteriores.
+Las versiones de la arquitectura Q están pensadas para incorporar funcionalidades de manera que la curva de aprendizaje sea adecuada para los alumnos, siendo paulatina e incremental, es decir, cada arquitectura $Q_{i+1}$ agrega más funcionalidad (ya sean instrucciones nuevas o modos de direccionamiento) a la arquitectura  $Q_{i}$ anterior.
 
 \ojo{Incorporar lo que sigue a un gráfico de la estructura en cebolla}{}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsection{Q1}
+{Q1}
 
 
 \textbf{Modos de direccionamiento}
@@ -99,7 +99,7 @@ Las versiones de la arquitectura Q están pensadas para incorporar funcionalidad
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsection{Q2}
+{Q2}
 
 \textbf{Modos de direccionamiento}
 \begin{enumerate}
@@ -113,7 +113,7 @@ Las versiones de la arquitectura Q están pensadas para incorporar funcionalidad
 \end{enumerate}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsection{Q3}
+{Q3}
 
 \textbf{Modos de direccionamiento}
 \begin{enumerate}
@@ -128,7 +128,7 @@ Las versiones de la arquitectura Q están pensadas para incorporar funcionalidad
 \end{enumerate}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsection{Q4}
+{Q4}
 
 \textbf{Modos de direccionamiento}
 \begin{enumerate}
@@ -154,7 +154,7 @@ Las versiones de la arquitectura Q están pensadas para incorporar funcionalidad
 \end{enumerate}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsection{Q5}
+{Q5}
 
 \textbf{Modos de direccionamiento}
 \begin{enumerate}
@@ -169,7 +169,7 @@ Las versiones de la arquitectura Q están pensadas para incorporar funcionalidad
 \end{enumerate}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsection{Q6}
+{Q6}
 
 \textbf{Modos de direccionamiento}
 \begin{enumerate}
