correcciones de la documentacion

--- a/src/main/resources/informe-LaTex/arquitecturasQ.tex
+++ b/src/main/resources/informe-LaTex/arquitecturasQ.tex
@@ -83,7 +83,7 @@ Las instrucciones de dos operandos descriptas a continuación son instrucciones 
 \begin{enumerate}
 \item \textbf{MUL destino, origen}
 Código de operación: 0000
-Esta instrucción describe la multiplicación entre los datos de los dos operandos. Esta operación es la única que cuyo resultado puede ser 32 bits, que son \ojo{lo que ocuparía más de una celda de memoria en código binario.}{(mara)No entiendo!. Así esta mejor??}, por lo que los primeros 16 bits, es decir, la primer mitad, es guardada en el registro R7 y la segunda en el operando destino.
+Esta instrucción describe la multiplicación entre los datos de los dos operandos. Esta operación es la única que cuyo resultado puede ser 32 bits, que son lo que ocuparía más de una celda de memoria en código binario, por lo que los primeros 16 bits, es decir, la primer mitad, es guardada en el registro \textbf{R7} y la segunda en el operando destino.
  
 \item \textbf{ADD destino, origen}
 Código de operación: 0010
