generando el dibujito que represente las capas de cebolla

--- a/src/main/resources/informe-LaTex/contexto.tex
+++ b/src/main/resources/informe-LaTex/contexto.tex
@@ -1,6 +1,6 @@
 \part{Contexto}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Sobre la materia \orga (susi)}
+\section{Sobre la materia \orga}
 
 
 Si bien los conceptos fundamentales de la ejecución de programas son independientes de las arquitecturas de computadoras comerciales, es conveniente explicar los mismos dando un marco específico. Por otro lado, las diferentes arquitecturas que subyacen los numerosos modelos disponibles en el mercado, incluyen un basto conjunto de herramientas y recursos de lenguaje para el control del funcionamiento de una computadora, pero que agregan complejidad innecesaria a la comprensión de los conceptos funcionales y la didáctica de la materia.
